--- a/custom_sale/views/sale.xml
+++ b/custom_sale/views/sale.xml
@@ -6,6 +6,7 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <field name='partner_shipping_id' position="after">
+                <field name="order_type"/>
                 <field name="estimated_amount"/>
                 <field name="transfer_type_id"/>
                 <field name="anticipe_amount"/>
