--- a/loan/views/loan.xml
+++ b/loan/views/loan.xml
@@ -57,6 +57,5 @@
         </field>
     </record>
     <!-- MenuItem -->
-    <menuitem id="loan_menu" name="Loan" action="loan_action" sequence="10"/>
-    <!-- parent="parent_id"  -->
+    <menuitem id="loan_menu" name="Loan" action="loan_action" sequence="10312" groups="loan.res_groups_administrador"/>
 </odoo>
