--- a/loan/views/loan.xml
+++ b/loan/views/loan.xml
@@ -24,7 +24,7 @@
                         </group>
                     </group>
                     <field name="line_ids">
-                        <tree>
+                        <tree readonly="1">
                             <field name="amount"/>
                             <field name="payment_date"/>
                         </tree>
