--- a/loan/views/loan.xml
+++ b/loan/views/loan.xml
@@ -62,11 +62,9 @@
     <record id="loan_action" model="ir.actions.act_window">
         <field name="name">Loans</field>
         <field name="res_model">loan</field>
-        <field name="view_mode">search,tree,form</field>
-        <field name="domain">[]</field>
-        <field name="context">{}</field>
+        <field name="view_mode">tree,form</field>
         <field name="help" type="html">
-            <p></p>
+            <p>Crea tu prestamo</p>
         </field>
     </record>
     <!-- MenuItem -->
